--- a/ft_onion/Dockerfile
+++ b/ft_onion/Dockerfile
@@ -3,16 +3,12 @@ FROM alpine:latest
 COPY index.html /usr/share/nginx/html/
 COPY nginx.conf /etc/nginx/
 COPY torrc /etc/tor/
+COPY sshd_config /etc/ssh/sshd_config
 
 ARG PASSWORD
 
-RUN apk --update add --no-cache tor nginx openssh \
-  && sed -i s/#PermitRootLogin.*/PermitRootLogin\ yes/ /etc/ssh/sshd_config \
-  && echo "root:${PASSWORD}" | chpasswd \
-  && rm -rf /var/cache/apk/*
-
-# Defining the Port 4242 for service
-RUN sed -ie 's/#Port 22/Port 4242/g' /etc/ssh/sshd_config
+RUN apk --update add --no-cache tor nginx openssh && rm -rf /var/cache/apk/*
+RUN echo "root:${PASSWORD}" | chpasswd
 RUN /usr/bin/ssh-keygen -A
 RUN ssh-keygen -t rsa -b 4096 -f  /etc/ssh/ssh_host_key
 
